packages/scrabble-solver/src/components/Solver/components/ResultCandidatePicker/ResultCandidatePicker.module.scss
@import 'styles/mixins';

.resultCandidatePicker {
  display: flex;
  gap: var(--spacing--l);

  @include media('<xs') {
    gap: var(--spacing--m);
  }
}

.buttons {
  flex: 0 0 auto;
  display: flex;
  border-radius: var(--border--radius);
}

.button {
  padding: var(--spacing--m);

  &:focus-within {
    z-index: 1;
  }

  &:first-child {
    border-right: none;
    border-top-right-radius: 0;
    border-bottom-right-radius: 0;
  }

  &:last-child {
    border-top-left-radius: 0;
    border-bottom-left-radius: 0;
  }

  [dir='rtl'] & {
    transform: rotate(180deg);
  }
}

.resultCandidate {
  @include button-reset;
  @include focus-effect;

  flex: 1;
  display: flex;
  align-items: center;
  min-width: 0;
  width: 100%;
  border: var(--border);
  border-radius: var(--border--radius);
  background-color: var(--color--white);
  box-shadow: var(--box-shadow);
  cursor: pointer;

  &[disabled] {
    @include disabled;
  }
}

.content {
  display: flex;
  align-items: center;
  width: 100%;
  overflow: hidden;
}

.points,
.word {
  padding: var(--spacing--m) var(--spacing--l);
}

.points {
  flex: 0 0 auto;
  font-weight: bold;

  [dir='ltr'] & {
    border-right: var(--border);

    @include media('<xs') {
      border-right: none;
      padding-right: var(--spacing--xs);
    }
  }

  [dir='rtl'] & {
    border-left: var(--border);

    @include media('<xs') {
      border-left: none;
      padding-left: var(--spacing--xs);
    }
  }
}

.word {
  @include ellipsis;

  flex: 1;
  text-transform: uppercase;
  text-align: center;
  white-space: pre-wrap;

  [dir='ltr'] & {
    @include media('<xs') {
      padding: var(--spacing--m);
      text-align: left;
    }
  }

  [dir='rtl'] & {
    @include media('<xs') {
      padding: var(--spacing--m);
      text-align: right;
    }
  }
}

.iconContainer {
  flex: 0 0 auto;
  display: flex;

  [dir='ltr'] & {
    padding-right: var(--spacing--l);
  }

  [dir='rtl'] & {
    padding-left: var(--spacing--l);
  }
}

.icon {
  $size: 20px;

  width: $size;
  height: $size;
  color: var(--color--inactive);
}

.insert {
  flex: 0 0 auto;
}

